--- a/index.css
+++ b/index.css
@@ -90,9 +90,16 @@ ul li:hover {
 
 .credits {
   font-size: 12px;
-  color: #999;
+  color: #807e7e;
   margin-top: 15px;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
+}
+
+.light-txt {
+  font-size: 12px;
+  color: #272525;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
