--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
   font-size: 16px;
   color: #333;
   text-align: center;
+  overflow: hidden;
 }
 
 input {
@@ -75,12 +76,19 @@ ul li:hover {
   transition: background-color 0.3s ease-in-out;
 }
 
+.footer {
+  margin-top: 15px;
+  font-size: 12px;
+  color: #1d1d1d;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   max-width: 320px;
   margin: 10px auto;
   padding: 20px;
+  margin-top: 5px;
 }
 
 .main-photo {
@@ -100,6 +108,6 @@ ul li:hover {
 .light-txt {
   font-size: 12px;
   color: #272525;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
